k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edwardnafornita-com
  labels:
    app: portfolio-web
spec:
  type: ClusterIP
  selector:
    app: portfolio-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
