k8s/base/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edwardnafornita-com
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - edwardnafornita.com
      secretName: edwardnafornita-com-tls
  rules:
    - host: edwardnafornita.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edwardnafornita-com
                port:
                  number: 80
